--- a/Spark_MovieLens_RDD.ipynb
+++ b/Spark_MovieLens_RDD.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will use an RDD-based API from [pyspark.mllib](https://spark.apache.org/docs/2.1.1/mllib-collaborative-filtering.html) instead and compare the performance and runtime with those in [Spark_MovieLens.ipynb](Spark_MovieLens.ipynb)."
+    "In this notebook, we will use an RDD-based API from [pyspark.mllib](https://spark.apache.org/docs/2.1.1/mllib-collaborative-filtering.html) instead and compare the performance and runtime with those in [Spark_MovieLens.ipynb](Spark_MovieLens.ipynb). **This notebook has to run in Spark environment.**"
    ]
   },
   {
